--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^3.0.1",
+    "flowbite-react": "^0.12.7",
+    "lucide-react": "^0.544.0",
+    "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19",
+    "@types/react-fontawesome": "^1.6.8",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
